data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2008.wast
;; 9. **Test Description**:    - **Scenario**: An exported function uses a `br_if` within a `block` to conditionally break to an enclosing `block`, called by another module.    - **Constraint**: Ensure the operand stack transforms to the correct height after the branch.    - **Differential Focus**: Determine if inconsistencies arise due to explicit vs. implicit label result handling.

(assert_invalid
  (module
    (func $test (result i32)
      (block (result i32)
        (i32.const 42)
        (block (br_if 0 (i32.const 1)))
        (drop)
      )
    )
  )
  "type mismatch"
)